--- a/kubernetes/apps/k0s/security/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/oauth2-proxy/app/helmrelease.yaml
@@ -61,5 +61,5 @@ spec:
         skip_provider_button = true
         ssl_insecure_skip_verify = false
         standard_logging = true
-        upstreams = [ "static://200" ]        
-        whitelist_domains = ".${DOMAIN}"
+        upstreams = [ "static://200" ]
+        whitelist_domains = [ "${DOMAIN}", "nucstack.com" ]
