--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -88,8 +88,8 @@ spec:
           annotations:
             kubernetes.io/ingress.class: nginx
             #nginx.ingress.kubernetes.io/auth-signin: https://oauth.${K0S_DOMAIN}/oauth2/start?rd=https://$host/oauth2/callback
-            nginx.ingress.kubernetes.io/auth-signin: https://oauth.${K0S_DOMAIN}/oauth2/start?rd=$escaped_request_uri
-            nginx.ingress.kubernetes.io/auth-url: https://hubble.${K0S_DOMAIN}/oauth2/auth
+            #nginx.ingress.kubernetes.io/auth-signin: https://oauth.${K0S_DOMAIN}/oauth2/start?rd=$escaped_request_uri
+            nginx.ingress.kubernetes.io/auth-url: https://oauth.${K0S_DOMAIN}/oauth2/auth
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.32.0.0/16
