--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -90,7 +90,7 @@ spec:
             # nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${K0S_DOMAIN}/oauth2/start?rd=https://hubble.nucstack.com/oauth2/callback"
             # nginx.ingress.kubernetes.io/auth-url: https://oauth.${K0S_DOMAIN}/oauth2/auth
             nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
-            nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
+            nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${K0S_DOMAIN}/oauth2/start?rd=$escaped_request_uri"
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.32.0.0/16
