--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -89,7 +89,7 @@ spec:
             kubernetes.io/ingress.class: nginx
             # nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${K0S_DOMAIN}/oauth2/start?rd=https://hubble.nucstack.com/oauth2/callback"
             # nginx.ingress.kubernetes.io/auth-url: https://oauth.${K0S_DOMAIN}/oauth2/auth
-            nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
+            nginx.ingress.kubernetes.io/auth-url: "https://oauth.${K0S_DOMAIN}/oauth2/auth"
             nginx.ingress.kubernetes.io/auth-signin: "https://oauth.${K0S_DOMAIN}/oauth2/start?rd=$escaped_request_uri"
     ipam:
       mode: kubernetes
