--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -53,6 +53,7 @@ spec:
               - id: oauth2-proxy
                 name: oauth2-proxy
                 secret: "{{.OAUTH2_CLIENT_SECRET}}"
+                public: true
                 redirectURIs:
                   - "https://alertmanager.nucstack.com/oauth2/callback"
                   - "https://esphome.nucstack.com/oauth2/callback"
