--- a/kubernetes/apps/k0s/security/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/oauth2-proxy/app/helmrelease.yaml
@@ -42,9 +42,10 @@ spec:
         provider = "oidc"
         oidc_issuer_url = "https://dex.${DOMAIN}"
         auth_logging = true
+        cookie_samesite = "lax"
         cookie_httponly = true
         cookie_name = "_nucstack_oauth"
-        cookie_domains = ".nucstack.com"
+        cookie_domains = [ ".${DOMAIN}", ".nucstack.com" ]
         cookie_refresh = "1h"
         cookie_secure = true
         email_domains = [ '*' ]
