--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -87,6 +87,7 @@ spec:
                 - *host
           annotations:
             kubernetes.io/ingress.class: nginx
+            nginx.ingress.kubernetes.io/auth-response-headers: Authorization
             nginx.ingress.kubernetes.io/auth-url: https://oauth.${K0S_DOMAIN}/oauth2/auth
             nginx.ingress.kubernetes.io/auth-signin: https://oauth.${K0S_DOMAIN}/oauth2/start?rd=https://$host
     ipam:
