--- a/kubernetes/apps/k0s/security/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/oauth2-proxy/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
         cookie_name = "_nucstack_oauth"
         cookie_domains = [ ".${DOMAIN}", ".nucstack.com" ]
         cookie_refresh = "1h"
-        cookie_secure = false
+        cookie_secure = true
         email_domains = [ '*' ]
         pass_access_token = true
         pass_authorization_header = true
