flip to nginx ingress

--- a/kubernetes/apps/k8s/home-automation/home-assistant/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/app/ingress.yaml
@@ -25,8 +25,11 @@ kind: Ingress
 metadata:
   name: home-assistant-code
   namespace: home-automation
+  annotations:
+    nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
+    nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
 spec:
-  ingressClassName: cilium
+  ingressClassName: nginx
   rules:
   - host: "hass-code.${DOMAIN}"
     http:
