--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
@@ -3,11 +3,11 @@ kind: Ingress
 metadata:
   name: zwavejs
   namespace: home-automation
-  # annotations:
-  #   nginx.ingress.kubernetes.io/auth-signin: "https://oauth.logfold.com/oauth2/start?rd=https://zwavejs.nucstack.com/oauth2/callback"
-  #   nginx.ingress.kubernetes.io/auth-url: "https://oauth.logfold.com/oauth2/auth"
+  annotations:
+    nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
+    nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
 spec:
-  ingressClassName: vilium
+  ingressClassName: nginx
   rules:
   - host: "zwavejs.${DOMAIN}"
     http:
