--- a/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/ingress.yaml
+++ b/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/ingress.yaml
@@ -3,8 +3,11 @@ kind: Ingress
 metadata:
   name: alertmanager
   namespace: monitoring
+  annotations:
+    nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
+    nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
 spec:
-  ingressClassName: cilium
+  ingressClassName: nginx
   rules:
   - host: "alertmanager.${DOMAIN}"
     http:
