add gitops to dex

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -352,6 +352,7 @@ tasks:
 # security/dex
       - vault kv put -mount=secret security/dex
           IMMICH_CLIENT_SECRET="{{.DEX_IMMICH_CLIENT_SECRET}}"
+          GITOPS_CLIENT_SECRET="{{.DEX_GITOPS_CLIENT_SECRET}}"
       # security/lldap
       - vault kv put -mount=secret security/lldap
           LLDAP_POSTGRES_SUPER_USER="{{.LLDAP_POSTGRES_SUPER_USER}}"
