--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -56,6 +56,11 @@ spec:
                 public: true
                 redirectURIs:
                   - "https://oauth.nucstack.com/oauth2/callback"
+              - id: weave-gitops
+                name: weave-gitops
+                secret: "{{.GITOPS_CLIENT_SECRET}}"
+                redirectURIs:
+                  - https://gitops.nucstack.com/oauth2/callback                 
   dataFrom:
     - extract:
         key: /security/lldap
