--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/externalsecret.yaml
@@ -14,8 +14,17 @@ spec:
     template:
       engineVersion: v2
       data:
+        values.yaml: |
+          oidcSecret:
+            create: true
+            clientID: "weave-gitops"
+            clientSecret: "{{ .GITOPS_CLIENT_SECRET }}"
+            issuerURL: "https://dex.${K0S_DOMAIN}"
+            redirectURL: "https://gitops.${DOMAIN}/oauth2/callback"
         username: admin
         password: "{{ .ADMIN_PASSWORD }}"
   dataFrom:
     - extract:
         key: /flux-system/weave-gitops
+    - extract:
+        key: /security/dex
