--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
@@ -25,6 +25,9 @@ spec:
       retries: 3
   uninstall:
     keepHistory: false
+  valuesFrom:
+    - kind: Secret
+      name: cluster-user-auth
   values:
     adminUser:
       create: true
