--- a/kubernetes/apps/k0s/monitoring/kustomization.yaml
+++ b/kubernetes/apps/k0s/monitoring/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./promtail/ks.yaml
+  #- ./promtail/ks.yaml
