--- a/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -83,6 +83,7 @@ spec:
       ingress:
         enabled: false
       alertmanagerSpec:
+        externalUrl: "https://alertmanager.${DOMAIN}"
         replicas: 1
         storage:
           volumeClaimTemplate:
