add basic auth for loki

--- a/.env.example
+++ b/.env.example
@@ -119,9 +119,12 @@ LLDAP_SERVER_KEY_SEED="xxxxxxxx"
 LLDAP_LDAP_BASE_DN="dc=example,dc=com"
 LLDAP_LB_IP="192.168.0.5"
 
+# loki - 'htpasswd -c loki_auth <user>'
+LOKI_BASIC_AUTH="xxxxxxxx"
+
 # minio
 MINIO_ROOT_USER="xxxxxxxx"
-MINIO_ROOT_PASSWORD="7xxxxxxxx"
+MINIO_ROOT_PASSWORD="xxxxxxxxx"
 MINIO_CONSOLE_SECRET_KEY="xxxxxxxx"
 MINIO_CONSOLE_ACCESS_KEY="xxxxxxxx"
 
