--- a/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
@@ -112,6 +112,9 @@ spec:
       ingress:
         enabled: true
         ingressClassName: nginx
+        annotations:
+          nginx.ingress.kubernetes.io/auth-type: basic
+          nginx.ingress.kubernetes.io/auth-secret: loki-basic-auth
         hosts:
           - host: &host "loki.${DOMAIN}"
             paths:
