--- a/kubernetes/apps/k8s/monitoring/loki/app/kustomization.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - ./configmap.yaml
+  - ./externalsecret.yaml
   - ./objectbucketclaim.yaml
   - ./helmrelease.yaml
