--- a/.env.example
+++ b/.env.example
@@ -121,6 +121,8 @@ LLDAP_LB_IP="192.168.0.5"
 
 # loki - 'htpasswd -c loki_auth <user>'
 LOKI_BASIC_AUTH="xxxxxxxx"
+LOKI_USERNAME="xxxxxxxx"
+LOKI_PASSWORD="xxxxxxxx"
 
 # minio
 MINIO_ROOT_USER="xxxxxxxx"
