flip loki to lb ip

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ K8S_SERVER_CIDR="192.168.0.0/24"
 K8S_IPAM_CIDR="192.168.0.110/27"
 K8S_NGINX_LB_IP="192.168.0.108"
 K8S_RSYSLOG_LB_IP="192.168.0.109"
+LOKI_LB_IP="192.168.0.110"
 
 # cloudflare
 CLOUDFLARE_EMAIL="user@example.com"
