--- a/kubernetes/bootstrap/k8s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k8s/sharedsecrets.yaml
@@ -26,6 +26,7 @@ spec:
         LOCAL_DOMAIN: "{{.LOCAL_DOMAIN}}"
         K0S_DOMAIN: "{{.K0S_DOMAIN}}"
         ENVIRONMENT: "{{.ENVIRONMENT}}"
+        LOKI_LB_IP: "{{.LOKI_LB_IP}}"
         NGINX_LB_IP: "{{.NGINX_LB_IP}}"
         NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
         SERVER_CIDR: "{{.SERVER_CIDR}}"
