--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -229,13 +229,14 @@ tasks:
           IPAM_CIDR="{{.K8S_IPAM_CIDR}}"
           LOCAL_DOMAIN="{{.LOCAL_DOMAIN}}"
           K0S_DOMAIN="{{.K0S_DOMAIN}}"
+          LOKI_LB_IP="{{.K8S_LOKI_LB_IP}}"
           NGINX_LB_IP="{{.K8S_NGINX_LB_IP}}"
           RSYSLOG_LB_IP="{{.K8S_RSYSLOG_LB_IP}}"
           NFS_SERVER_IP="{{.NFS_SERVER_IP}}"
           SERVER_CIDR="{{.K8S_SERVER_CIDR}}"
           VAULT_ADDR="{{.VAULT_ADDR}}"
           VIP_IP="{{.K8S_VIP_IP}}"
-          VIP_PORT="{{.K8S_VIP_PORT}}"
+          VIP_PORT="{{.VIP_PORT}}"
       # cert-manager
       - vault kv put -mount=secret cert-manager/cloudflare          
           CLOUDFLARE_TOKEN="{{.CLOUDFLARE_TOKEN}}"
