--- a/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
@@ -109,20 +109,23 @@ spec:
       replicas: 2
       image:
         registry: ghcr.io
-      ingress:
-        enabled: true
-        ingressClassName: nginx
-        annotations:
-          nginx.ingress.kubernetes.io/auth-type: basic
-          nginx.ingress.kubernetes.io/auth-secret: loki-basic-auth
-        hosts:
-          - host: &host "loki.${DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
+      service:
+        type: loadBalancer
+        loadBalancerIP: "${LOKI_LB_IP}"
+      # ingress:
+      #   enabled: true
+      #   ingressClassName: nginx
+      #   # annotations:
+      #   #   nginx.ingress.kubernetes.io/auth-type: basic
+      #   #   nginx.ingress.kubernetes.io/auth-secret: loki-basic-auth
+      #   hosts:
+      #     - host: &host "loki.${DOMAIN}"
+      #       paths:
+      #         - path: /
+      #           pathType: Prefix
+      #   tls:
+      #     - hosts:
+      #         - *host
     read:
       replicas: 2
       persistence:
