add basic auth to lb gateway

--- a/kubernetes/apps/k8s/monitoring/loki/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       type: Opaque
       engineVersion: v2
       data:
-        auth: "{{.BASIC_AUTH}}"
+        .htpasswd: "{{.BASIC_AUTH}}"
   dataFrom:
     - extract:
         key: /monitoring/loki
