--- a/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
@@ -112,6 +112,9 @@ spec:
       service:
         type: LoadBalancer
         loadBalancerIP: "${LOKI_LB_IP}"
+      basicAuth:
+        enabled: true
+        existingSecret: loki-basic-auth
       # ingress:
       #   enabled: true
       #   ingressClassName: nginx
