--- a/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/loki/app/helmrelease.yaml
@@ -113,7 +113,7 @@ spec:
         type: LoadBalancer
         loadBalancerIP: "${LOKI_LB_IP}"
       basicAuth:
-        enabled: true
+        enabled: false
         existingSecret: loki-basic-auth
       # ingress:
       #   enabled: true
