--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
       enabled: true
     rbac:
       create: true
-      impersonationResources: ["groups"]
+      impersonationResources: ["users"]
       impersonationResourceNames:
       - grafana-admin
     podAnnotations:
