--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
@@ -49,8 +49,6 @@ spec:
       enabled: true
     rbac:
       create: true
-      impersonationResources: ["users"]
-      impersonationResourceNames:
-      - grafana-admin
+      impersonationResourceNames: ["admin"]
     podAnnotations:
       secret.reloader.stakater.com/reload: cluster-user-auth
