--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
@@ -49,6 +49,7 @@ spec:
       enabled: true
     rbac:
       create: true
+      impersonationResources: ["users"]
       impersonationResourceNames: ["dan@mcavinue.io"]
     podAnnotations:
       secret.reloader.stakater.com/reload: cluster-user-auth
