--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       name: cluster-user-auth
   values:
     adminUser:
-      create: true
+      create: false
       createSecret: false
       username: admin
     ingress:
@@ -49,7 +49,7 @@ spec:
       enabled: true
     rbac:
       create: true
-      impersonationResources: ["users"]
-      impersonationResourceNames: ["dan@mcavinue.io"]
+      impersonationResources: ["groups"]
+      impersonationResourceNames: ["admin"]
     podAnnotations:
       secret.reloader.stakater.com/reload: cluster-user-auth
