--- a/kubernetes/apps/k8s/flux-system/weave-gitops/rbac/cluster-admin.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/rbac/cluster-admin.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: weave-cluster-admin
+  name: cluster-admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -11,3 +11,6 @@ subjects:
 - kind: Group
   name: k8s-cluster-admin
   apiGroup: rbac.authorization.k8s.io
+- kind: Group
+  apiGroup: rbac.authorization.k8s.io
+  name: system:masters
