--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
@@ -47,5 +47,8 @@ spec:
       create: false
     metrics:
       enabled: true
+    rbac:
+      create: true
+      impersonationResources: ["admin"]
     podAnnotations:
       secret.reloader.stakater.com/reload: cluster-user-auth
