--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/rbac.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/rbac.yaml
@@ -19,3 +19,16 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
   name: dan@mcavinue.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: weave-cluster-admin
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: dan@mcavinue.io
