--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -17,6 +17,7 @@ includes:
   flux: .taskfiles/flux.yaml
   kubernetes: .taskfiles/kubernetes.yaml
   proxmox: .taskfiles/proxmox.yaml
+  restic: .taskfiles/restic.yaml
   vault: .taskfiles/vault.yaml
   volsync: .taskfiles/volsync/Tasks.yaml
 
