--- a/.env.example
+++ b/.env.example
@@ -106,6 +106,11 @@ IMMICH_DB_BACKUP_SECRET="xxxxxxxx"
 INFLUXDB_USER="xxxxxxxx"
 INFLUXDB_PASSWORD="xxxxxxxx"
 
+# kopia
+KOPIA_GCS_PROJECT="some-gcs-project"
+KOPIA_GCS_BUCKET="some-gcs-bucket"
+KOPIA_PASSWORD="xxxxxxxx"
+
 # lldap
 LLDAP_POSTGRES_SUPER_USER="postgres"
 LLDAP_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
