--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -29,3 +29,24 @@ spec:
   dataFrom:
     - extract:
         key: /security/lldap
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: db-backup-secret
+  namespace: storage
+spec:
+  refreshInterval: "30m"
+  secretStoreRef:
+    name: vault-kv-backend
+    kind: SecretStore
+  target:
+    name: db-backup-secret
+    template:
+      engineVersion: v2
+      data:
+        CONSOLE_ACCESS_KEY: "{{.CONSOLE_ACCESS_KEY}}"
+        CONSOLE_SECRET_KEY: ""
+  dataFrom:
+    - extract:
+        key: /storage/minio
