fix missing secrets

--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -29,6 +29,8 @@ spec:
   dataFrom:
     - extract:
         key: /security/lldap
+    - extract:
+        key: /storage/minio
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
