--- a/kubernetes/apps/k8s/home-automation/kustomization.yaml
+++ b/kubernetes/apps/k8s/home-automation/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./esphome/ks.yaml
+  #- ./esphome/ks.yaml
   #- ./frigate/ks.yaml
   - ./home-assistant/ks.yaml
   - ./tidbyt-proxy/ks.yaml
