add influxdb volsync

--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -425,6 +425,8 @@ tasks:
           RESTIC_FRIGATE_PASSWORD="{{.RESTIC_FRIGATE_PASSWORD}}"
       - vault kv put -mount=secret volsync/immich
           RESTIC_IMMICH_PASSWORD="{{.RESTIC_IMMICH_PASSWORD}}"
+      - vault kv put -mount=secret volsync/influxdb
+          RESTIC_INFLUXDB_PASSWORD="{{.RESTIC_INFLUXDB_PASSWORD}}"
       - vault kv put -mount=secret volsync/home-assistant
           RESTIC_HASS_PASSWORD="{{.RESTIC_HASS_PASSWORD}}"
       - vault kv put -mount=secret volsync/zwavejs
