add influxdb backup

--- a/.env.example
+++ b/.env.example
@@ -156,6 +156,7 @@ RESTIC_ESPHOME_PASSWORD="xxxxxxxx"
 RESTIC_FRIGATE_PASSWORD="xxxxxxxx"
 RESTIC_HASS_PASSWORD="xxxxxxxx"
 RESTIC_ZWAVEJS_PASSWORD="xxxxxxxx"
+RESTIC_INFLUXDB_PASSWORD="xxxxxxxx"
 
 # rsyslog
 RSYSLOG_LB_IP="192.168.0.108"
