--- a/kubernetes/apps/k8s/media/immich/ks.yaml
+++ b/kubernetes/apps/k8s/media/immich/ks.yaml
@@ -1,21 +1,21 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: cluster-apps-immich
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: cluster-apps-media-immich-database
-  path: ./kubernetes/apps/k8s/media/immich/app
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  wait: false
-  interval: 30m
-  retryInterval: 1m
-  timeout: 5m
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: cluster-apps-immich
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: cluster-apps-media-immich-database
+#   path: ./kubernetes/apps/k8s/media/immich/app
+#   prune: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: home-kubernetes
+#   wait: false
+#   interval: 30m
+#   retryInterval: 1m
+#   timeout: 5m
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
